[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cocotb-framework"
version = "0.1.0"
description = "Reusable CocoTB verification infrastructure for RTL testing — BFMs, testbenches, and scoreboards for AMBA protocols and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "sean galloway" },
]
keywords = [
    "cocotb", "verification", "rtl", "fpga", "asic",
    "axi", "apb", "amba", "bfm", "testbench",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: cocotb",
    "Intended Audience :: Developers",
"Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

dependencies = [
    "cocotb>=1.9.0",
    "cocotb-bus>=0.2.1",
    "cocotb-coverage>=1.2.0",
    "psutil>=5.9.0",
    "rich>=14.0.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
wavedrom = ["ortools>=9.12.0"]
crc = ["crc>=7.0.0"]
all = [
    "ortools>=9.12.0",
    "crc>=7.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/sean-galloway/RTLDesignSherpa-DV"
Repository = "https://github.com/sean-galloway/RTLDesignSherpa-DV"
Issues = "https://github.com/sean-galloway/RTLDesignSherpa-DV/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
